# rust-fastfile

./: .gitignore  Cargo.toml  README.md  config.toml
models/: config.json  pooling_config.json  sentence_bert_config.json  tokenizer_config.json
src/: ai_search.rs  config.rs  document_parser.rs  main.rs
